# ai-run

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
config/: airun.toml.example  blocklist.txt.example
src/: ai_client.h  anthropic_client.cpp  anthropic_client.h  command_executor.cpp  command_executor.h  config.cpp  config.h  main.cpp  openai_client.cpp  openai_client.h  prompt_builder.cpp  prompt_builder.h  safety_filter.cpp  safety_filter.h
